langs = [
  'en_US', # By SkyzohKey
  'fr_FR', # By SkyzohKey
  'da_DK', # By bheart (Will Tange)
  'pt_PT', # By gmscs
  'eo',    # By Kamparano
  'zh_CN', # By lineteen (Easy Tang)
  'de',    # By AncientWeapon (Sarah Kraßnigg)
  'uk',    # By barwinko (Roman Stobenski)
  'ru_RU', # By talipomin (Roman Boldyrev), rigidecho
]
gettext('ricin', languages : langs)
