# vim: set ft=python

src = files([
    'ChatView.vala',
    'IMessageListRow.vala',
    'SystemMessageListRow.vala',
    'InlineImageMessageListRow.vala',
    'InlineFileMessageListRow.vala',
    'MessageListRow.vala',
    'FriendListRow.vala',
    'MainWindow.vala',
    'Notification.vala',
    'ProfileChooser.vala',
    'Ricin.vala',
    'SettingsView.vala',
    'Util.vala',
    'Wrapper.vala',
    'ThemeManager.vala',
    'HistoryManager.vala'
])
