# vim: set ft=python

src = files([
    'ChatView.vala',
    'IMessageListRow.vala',
    'SystemMessageListRow.vala',
    'StatusMessageListRow.vala',
    'InlineImageMessageListRow.vala',
    'InlineFileMessageListRow.vala',
    'QuoteMessageListRow.vala',
    'QuoteLabel.vala',
    'PlainLabel.vala',
    'EditableLabel.vala',
    'MessageListRow.vala',
    'FriendListRow.vala',
    'MainWindow.vala',
    'Notification.vala',
    'ProfileChooser.vala',
    'Ricin.vala',
    'WelcomeView.vala',
    'SettingsView.vala',
    'Util.vala',
    'Wrapper.vala',
    'ThemeManager.vala',
    'HistoryManager.vala',
    'Settings.vala'
])
