# vim: set ft=python

src = files([
    'ChatView.vala',
    'EditableLabel.vala',
    'FriendListRow.vala',
    'HistoryManager.vala',
    'IMessageListRow.vala',
    'InlineFileMessageListRow.vala',
    'InlineImageMessageListRow.vala',
    'MainWindow.vala',
    'MessageListRow.vala',
    'Notification.vala',
    'PlainLabel.vala',
    'ProfileChooser.vala',
    'QuoteLabel.vala',
    'QuoteMessageListRow.vala',
    'Ricin.vala',
    'Settings.vala',
    'SettingsView.vala',
    'StatusMessageListRow.vala',
    'SystemMessageListRow.vala',
    'ThemeManager.vala',
    'ToxIdenticons.vala',
    'Util.vala',
    'WelcomeView.vala',
    'Wrapper.vala',
])
